--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -17,3 +17,5 @@ title: Welcome to Middleman
 = link_to "Read Documentation",
   "https://middlemanapp.com/basics/templating_language/",
   target: "_blank"
+
+#test
