--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -13,3 +13,9 @@ a
 .middleman-logo
   margin-bottom: 1rem
   width: 10rem
+
+#test
+  width: 100px
+  height: 100px
+  margin: 1rem auto
+  background: image-url('test.png')
