--- a/source/_layouts/layout.html.haml
+++ b/source/_layouts/layout.html.haml
@@ -1,8 +1,8 @@
 !!! 5
-%html{ lang: 'en' }
+%html.no-js{ lang: 'en' }
   %head
-    %meta{ content: 'IE: edge', 'http-equiv' => 'X-UA-Compatible' }
     %meta{ charset: 'utf-8' }
+    %meta{ content: 'ie=edge', 'http-equiv' => 'x-ua-compatible' }
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1, shrink-to-fit=no' }
     %title= current_page.data.title || 'Middleman'
     = stylesheet_link_tag 'site'
