Default to no JS/CSS output.

--- a/source/_layouts/layout.html.haml
+++ b/source/_layouts/layout.html.haml
@@ -3,8 +3,8 @@
   %head
     %meta{ charset: 'utf-8' }
     %meta{ content: 'ie=edge', 'http-equiv' => 'x-ua-compatible' }
-    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1, shrink-to-fit=no' }
-    %title= current_page.data.title || 'Middleman'
+    %meta{ name: 'viewport', content: 'width=device-width,initial-scale=1,shrink-to-fit=no' }
+    %title= current_page.data.title
     = stylesheet_link_tag 'site'
   %body{ class: page_classes }
     = yield
