--- a/source/assets/stylesheets/_foundation_components.sass
+++ b/source/assets/stylesheets/_foundation_components.sass
@@ -1,7 +1,7 @@
 // Foundation components may be included individually as mixins
 
-+foundation-global-styles()
-+foundation-grid()
+// +foundation-global-styles()
+// +foundation-grid()
 // +foundation-typography()
 // +foundation-forms()
 // +foundation-button()
