--- a/source/assets/stylesheets/_foundation_settings.scss
+++ b/source/assets/stylesheets/_foundation_settings.scss
@@ -1,3 +1,6 @@
+// Latest master version of _settings.scss lives at:
+// https://github.com/zurb/foundation-rails/blob/master/vendor/assets/scss/settings/_settings.scss
+//
 //  Foundation for Sites Settings
 //  -----------------------------
 //
