--- a/source/_layouts/layout.html.haml
+++ b/source/_layouts/layout.html.haml
@@ -8,4 +8,5 @@
     = stylesheet_link_tag 'site'
   %body{ class: page_classes }
     = yield
-    = javascript_include_tag 'site'
+    = javascript_include_tag 'site',
+      data: { turbolinks: { eval: false } }
