Basic example of nested layout.

--- a/source/other.html.haml
+++ b/source/other.html.haml
@@ -1,5 +1,7 @@
-.row
-  .columns
-    %h1 Another page
-    = link_to '/' do
-      Back to home page
+---
+layout: grid
+---
+
+%h2 Another page
+= link_to '/' do
+  Back to home page
