Have Gulp do CSS hashing after purifycss runs.

--- a/source/assets/stylesheets/_foundation_components.sass
+++ b/source/assets/stylesheets/_foundation_components.sass
@@ -1,8 +1,8 @@
 // Foundation components may be included individually as mixins
 
-// +foundation-global-styles()
++foundation-global-styles()
 // +foundation-grid()
-// +foundation-typography()
++foundation-typography()
 // +foundation-forms()
 // +foundation-button()
 // +foundation-accordion()
