--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,5 +5,10 @@ title: Hello world
 .row
   .columns
     %h1 Hello world
-    = link_to '/other.html' do
-      To another page
+    %ul
+      %li
+        = link_to '/other.html' do
+          To another page
+      %li
+        = link_to '/misc/more.html' do
+          To yet another page
