Break out Foundation typography mixins.

--- a/source/assets/stylesheets/_foundation_components.sass
+++ b/source/assets/stylesheets/_foundation_components.sass
@@ -2,7 +2,17 @@
 
 +foundation-global-styles()
 +foundation-grid()
-+foundation-typography()
+
+// Foundation's typography styles may be included as one piece:
+//
+// +foundation-typography()
+//
+// ...or as sub-components:
++foundation-typography-base()
++foundation-typography-helpers()
++foundation-text-alignment()
+// +foundation-print-styles()
+
 // +foundation-forms()
 // +foundation-button()
 // +foundation-accordion()
