Setting up Foundation/Turbolinks stuff.

--- a/source/_layouts/layout.html.haml
+++ b/source/_layouts/layout.html.haml
@@ -7,7 +7,8 @@
     %title= current_page.data.title
     = stylesheet_link_tag 'site'
   %body{ class: page_classes }
-    = yield
+    = partial '_partials/header'
+    %main= yield
     = partial '_partials/footer'
     = javascript_include_tag 'site',
       data: { turbolinks: { eval: false } }
