--- a/source/assets/stylesheets/_foundation_components.sass
+++ b/source/assets/stylesheets/_foundation_components.sass
@@ -23,8 +23,8 @@
 // +foundation-callout()
 // +foundation-card()
 // +foundation-close-button()
-// +foundation-menu()
-// +foundation-menu-icon()
++foundation-menu()
++foundation-menu-icon()
 // +foundation-drilldown-menu()
 // +foundation-dropdown()
 // +foundation-dropdown-menu()
@@ -42,8 +42,8 @@
 // +foundation-table()
 // +foundation-tabs()
 // +foundation-thumbnail()
-// +foundation-title-bar()
++foundation-title-bar()
 // +foundation-tooltip()
-// +foundation-top-bar()
-// +foundation-visibility-classes()
++foundation-top-bar()
++foundation-visibility-classes()
 // +foundation-float-classes()
