--- a/source/questions.html.haml
+++ b/source/questions.html.haml
@@ -481,10 +481,10 @@ layout: false
   %li
     Spelled out in English, what are the four shortest letters of the Greek alphabet, at two letters each?
     %ul
-      %li mu
-      %li nu
-      %li xi
-      %li pi
+      %li Mu
+      %li Nu
+      %li Xi
+      %li Pi
 
   %li
     What is the title of Salvador Dalí’s famous painting featuring melting pocket watches?
@@ -629,6 +629,7 @@ layout: false
     %ul
       %li
         %i The Grand Budapest Hotel
+        %small (“Zubrowka”)
 
   %li
     What nonprofit organization, founded in 1892, was instrumental in the creation of Yosemite National Park?
@@ -678,7 +679,7 @@ layout: false
         %small (2002)
 
   %li
-    Prior to <i>Hamilton</i> this year, what two other Best Musical Tony winners were based on the lives of, and named after, real-world political figures?
+    Prior to <i>Hamilton</i>, what two other Best Musical Tony winners were based on the lives of, and named after, real-world political figures?
     %ul
       %li
         %i Evita
@@ -716,7 +717,7 @@ layout: false
         %i Gunsmoke
 
   %li
-    On this day (September 20) in 1973, what two tennis players participated in the “Battle of the Sexes” match at the Houston Astrodome?
+    On September 20, 1973, what two tennis players participated in the “Battle of the Sexes” match at the Houston Astrodome?
     %ul
       %li Billie Jean King
       %li Bobby Riggs
@@ -752,7 +753,7 @@ layout: false
         Horsepower
 
   %li
-    Who performed at the Super Bowl halftime show the first time the halftime show drew more TV viewers than the football game?
+    Who was the first Super Bowl halftime show headliner to draw more TV viewers than the football portion of the broadcast?
     %ul
       %li
         Michael Jackson
@@ -837,19 +838,6 @@ layout: false
         %small (showing the <a href="https://upload.wikimedia.org/wikipedia/commons/6/6e/2002_LA_Proof.png">Louisiana Purchase</a>)
 
   %li
-    Although the Primetime Emmy for Outstanding Reality Competition Program has been awarded each year since 2003, what are the only three shows to have won it?
-    %ul
-      %li
-        %i The Amazing Race
-        %small (won ten times)
-      %li
-        %i The Voice
-        %small (won twice)
-      %li
-        %i Top Chef
-        %small (won once)
-
-  %li
     What do bananas Foster, cherries jubilee, and crêpes Suzette have in common?
     %ul
       %li
@@ -867,7 +855,6 @@ layout: false
     %ul
       %li
         Muhammad Ali
-        %small (<a href="http://www.georgelois.com/pages/Esquire/Esq.Ali.html">April 1968 cover</a>)
 
   %li
     What four opponents did Franklin D. Roosevelt defeat in Presidential elections?
@@ -1127,13 +1114,6 @@ layout: false
       %li
         California
         %small (estimated 43.8% in 2013)
-
-  %li
-    Which of the Final Four schools in this year’s NCAA men’s basketball tournament is the oldest?
-    %ul
-      %li
-        University of North Carolina
-        %small (chartered 1789)
 
   %li
     What constellation appears on the flags of Australia and New Zealand?
