Favor single-line answers where possible.

--- a/source/questions.html.haml
+++ b/source/questions.html.haml
@@ -110,10 +110,7 @@ layout: false
   %li
     At the four corners of Central Park in Manhattan are monuments to what four people?
     %ul
-      %li Christopher Columbus
-      %li William Tecumseh Sherman
-      %li Duke Ellington
-      %li Frederick Douglass
+      %li Christopher Columbus; William Tecumseh Sherman; Duke Ellington; Frederick Douglass
 
   %li
     The adoption of fuel injection in automotive engines made what other car part essentially obsolete?
@@ -166,7 +163,7 @@ layout: false
   %li
     The “Twelve-Mile Circle” forms part of the border between what two U.S. states?
     %ul
-      %li Pennsylvania and Delaware
+      %li Pennsylvania; Delaware
 
   %li
     A 1988 strike by the Writers Guild of America led to the creation of what Fox program that ran on the network for 25 seasons?
@@ -268,13 +265,14 @@ layout: false
     %ul
       %li
         Garcia
-        %small (#6)
-      %li
+        = succeed ';' do
+          %small (#6)
         Rodriguez
-        %small (#9)
-      %li
+        = succeed ';' do
+          %small (#9)
         Martinez
-        %small (#10)
+        = succeed ';' do
+          %small (#10)
 
   %li
     What faux fraternity nickname was given to the University of Houston men’s basketball program in the early 1980s, for their style of above-the-rim play?
@@ -341,10 +339,7 @@ layout: false
   %li
     What are the names of the four natural gaits exhibited by horses?
     %ul
-      %li Walk
-      %li Trot
-      %li Canter
-      %li Gallop
+      %li Walk; trot; canter; gallop
 
   %li
     The magazine <i>The Economist</i> maintains a statistic measuring international currency strengths based on the price of what widely available food item?
@@ -367,8 +362,7 @@ layout: false
   %li
     What are the informal names of Major League Baseball’s spring training leagues in Florida and Arizona?
     %ul
-      %li Grapefruit League
-      %li Cactus League
+      %li Grapefruit League; Cactus League
 
   %li
     If you’ve bought furniture from IKEA, it might be made entirely or in part out of MDF, which stands for what?
@@ -421,8 +415,7 @@ layout: false
   %li
     On March 17, 2017, Hasbro announced that in addition to the thimble, what two player pieces would be retired from upcoming editions of the board game “Monopoly”?
     %ul
-      %li Wheelbarrow
-      %li Shoe
+      %li Shoe; wheelbarrow
 
   %li
     What was the name of the hacker (or hacker group) who leaked e-mails from the Democratic National Committee to Wikileaks in mid-2016?
@@ -481,10 +474,7 @@ layout: false
   %li
     Spelled out in English, what are the four shortest letters of the Greek alphabet, at two letters each?
     %ul
-      %li Mu
-      %li Nu
-      %li Xi
-      %li Pi
+      %li Mu; nu; xi; pi
 
   %li
     What is the title of Salvador Dalí’s famous painting featuring melting pocket watches?
@@ -503,8 +493,8 @@ layout: false
     %ul
       %li
         MacArthur
-        %small (Arthur MacArthur Jr. and Douglas MacArthur)
-      %li
+        = succeed ';' do
+          %small (Arthur MacArthur Jr. and Douglas MacArthur)
         Roosevelt
         %small (Theodore Roosevelt and Theodore Roosevelt Jr.)
 
@@ -529,15 +519,12 @@ layout: false
   %li
     In Greek mythology, the chimera was usually described as a combination of what three animals?
     %ul
-      %li Lion
-      %li Goat
-      %li Snake
+      %li Lion; goat; snake
 
   %li
     What are the only two Central American countries which do not border both the Caribbean Sea and the Pacific Ocean?
     %ul
-      %li Belize
-      %li El Salvador
+      %li Belize; El Salvador
 
   %li
     What is the term in Jewish dietary laws for food which contains neither meat nor dairy ingredients and so may be eaten alongside either?
@@ -579,14 +566,12 @@ layout: false
   %li
     What are the two main varieties of coffee grown around the world for commercial sale?
     %ul
-      %li Arabica
-      %li Robusta
+      %li Arabica; robusta
 
   %li
     What two U.S. states share borders with the most other states, with eight neighbors each?
     %ul
-      %li Missouri
-      %li Tennessee
+      %li Missouri; Tennessee
 
   %li
     What adjective meaning “monstrously large” originates from the name of a literary character created by François Rabelais in the 16th century?
@@ -667,14 +652,14 @@ layout: false
     %ul
       %li
         Blue Jays
-        %small (1992 and 1993)
-      %li
+        = succeed ';' do
+          %small (1992 and 1993)
         Marlins
-        %small (1997 and 2003)
-      %li
+        = succeed ';' do
+          %small (1997 and 2003)
         Diamondbacks
-        %small (2001)
-      %li
+        = succeed ';' do
+          %small (2001)
         Angels
         %small (2002)
 
@@ -682,8 +667,8 @@ layout: false
     Prior to <i>Hamilton</i>, what two other Best Musical Tony winners were based on the lives of, and named after, real-world political figures?
     %ul
       %li
-        %i Evita
-      %li
+        = succeed ';' do
+          %i Evita
         %i Fiorello!
 
   %li
@@ -701,8 +686,7 @@ layout: false
   %li
     On the MTV show <i>Beavis and Butthead</i>, the title characters are most often seen wearing T-shirts for what two musical groups?
     %ul
-      %li Metallica
-      %li AC/DC
+      %li Metallica; AC/DC
 
   %li
     What does “SIM” stand for, as in the SIM card in a cellular phone?
@@ -719,8 +703,7 @@ layout: false
   %li
     On September 20, 1973, what two tennis players participated in the “Battle of the Sexes” match at the Houston Astrodome?
     %ul
-      %li Billie Jean King
-      %li Bobby Riggs
+      %li Billie Jean King; Bobby Riggs
 
   %li
     The Indian Ocean island of Mauritius has the only national coat of arms depicting what animal?
@@ -810,8 +793,7 @@ layout: false
   %li
     What are the names of the two measurements that make up a blood pressure reading?
     %ul
-      %li Systolic pressure
-      %li Diastolic pressure
+      %li Systolic pressure; diastolic pressure
 
   %li
     Two undersea characters, one from an 1870 novel and one from a 2003 film, share a Latin name. What is the name, and what is its English translation?
@@ -835,7 +817,7 @@ layout: false
     %ul
       %li
         Louisiana
-        %small (showing the <a href="https://upload.wikimedia.org/wikipedia/commons/6/6e/2002_LA_Proof.png">Louisiana Purchase</a>)
+        %small (showing the Louisiana Purchase)
 
   %li
     What do bananas Foster, cherries jubilee, and crêpes Suzette have in common?
@@ -861,14 +843,14 @@ layout: false
     %ul
       %li
         Herbert Hoover
-        %small (1932)
-      %li
+        = succeed ';' do
+          %small (1932)
         Alf Landon
-        %small (1936)
-      %li
+        = succeed ';' do
+          %small (1936)
         Wendell Wilkie
-        %small (1940)
-      %li
+        = succeed ';' do
+          %small (1940)
         Thomas Dewey
         %small (1944)
 
@@ -906,15 +888,12 @@ layout: false
   %li
     What are the three ingredients (not including ice or garnish) of a Negroni cocktail?
     %ul
-      %li Gin
-      %li Campari
-      %li Sweet vermouth
+      %li Gin; Campari; sweet vermouth
 
   %li
     In 2012, the Gibson guitar company was fined $300,000 for illegally importing what two types of tropical wood?
     %ul
-      %li Ebony
-      %li Rosewood
+      %li Ebony; rosewood
 
   %li
     What film director, born in 1946, created a comic strip called <i>The Angriest Dog in the World</i>, which ran from 1983 to 1992?
@@ -927,7 +906,7 @@ layout: false
     %ul
       %li
         Mississippi
-        %small (<a href="https://en.wikipedia.org/wiki/Hiram_Rhodes_Revels">Hiram Revels</a>; served from February 23, 1870 to March 3, 1871)
+        %small (Hiram Revels; served from February 23, 1870 to March 3, 1871)
 
   %li
     What is a potter’s field used for?
@@ -944,8 +923,7 @@ layout: false
   %li
     Name either of the two countries spanned by the Darién Gap.
     %ul
-      %li Panama
-      %li Colombia
+      %li Panama; Colombia
 
   %li
     What is the name of the Comic Book Guy’s store on <i>The Simpsons</i>?
@@ -965,7 +943,7 @@ layout: false
     %ul
       %li
         Philadelphia
-        %small (<a href="https://en.wikipedia.org/wiki/Philadelphia_City_Hall">548 feet tall</a>)
+        %small (548 feet tall)
 
   %li
     At what university did President Kennedy deliver the famous “we choose to go to the moon” speech?
@@ -1023,14 +1001,13 @@ layout: false
     %ul
       %li
         Teal
-        %small (after the <a href="https://en.wikipedia.org/wiki/Eurasian_teal">common teal</a>)
+        %small (after the common teal)
 
   %li
     14 North Moore Street in the Tribeca neighborhood of Manhattan is most notable for its use in what movie franchise?
     %ul
       %li
         %i Ghostbusters
-        %small (<a href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Ghostbusters_Firehouse_crop.jpg/1165px-Ghostbusters_Firehouse_crop.jpg">photo</a>)
 
   %li
     What is the largest U.S. state, by population, without a team in one of the four major North American sports leagues?
@@ -1049,18 +1026,18 @@ layout: false
     %ul
       %li
         Pluto
-        %small (<a href="https://en.wikipedia.org/wiki/Dwarf_planet">dwarf planets</a> recognized by the International Astronomical Union)
+        %small (dwarf planets recognized by the International Astronomical Union)
 
   %li
     What are the five levels of nobility in the British peerage system?
     %ul
       %li
         Duke
-        %small (highest-ranking)
-      %li Marquess
-      %li Earl
-      %li Viscount
-      %li
+        = succeed ';' do
+          %small (highest-ranking)
+        Marquess;
+        Earl;
+        Viscount;
         Baron
         %small (lowest-ranking)
 
@@ -1087,7 +1064,7 @@ layout: false
     %ul
       %li
         Hawaii
-        %small (depicting <a href="http://www.statequarterguide.com/2008-hawaii-state-quarter/">Kamehameha I</a>)
+        %small (depicting Kamehameha I)
 
   %li
     In Greek and Roman times, costly purple dye reserved for the garments of the aristocracy was derived from what animal?
