Link to Bacchus Facebook page.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -30,6 +30,11 @@ title: Bacchus trivia
       The team leading at halftime receives a free round of up to four drinks,
       and the winning team at the end of the night receives a $25 gift card to
       Bacchus (redeemable on non-trivia nights).
+    %p
+      For updates from Bacchus,
+      = succeed '.' do
+        = link_to 'like their page on Facebook',
+          'https://www.facebook.com/Bacchus-Wood-Fired-145184168850725/'
     %hr.spacer
 
 .row
