--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -22,18 +22,22 @@ title: Bacchus trivia
     %h2 Ready to play live?
     %p
       Bacchus holds trivia <strong>every Tuesday night at 7 PM at 33 Second
-      Street in downtown Troy</strong>. Use the stairs to the left of the main
-      building entrance leading down from sidewalk level. Free off-street
-      evening parking is available two blocks west in the garage at the corner
-      of River and State Street.
+      Street in downtown Troy</strong>.
     %p
-      The team leading at halftime receives a free round of up to four drinks,
-      and the winning team at the end of the night receives a $25 gift card to
-      Bacchus (redeemable on non-trivia nights).
+      It’s always free to play, and there is no hard cap on team size (though
+      keeping it under eight or so people is appreciated). The team leading at
+      halftime receives a free round of up to four drinks, and the winning team
+      at the end of the night receives a $25 gift card to Bacchus, redeemable
+      on non-trivia nights.
+    %p
+      Use the stairs leading down to the bar area to the left of the main
+      building entrance at 33 Second Street. Free off-street evening parking is
+      available two blocks west in the garage at the corner of River and State
+      Street.
     %p
       For updates from Bacchus,
       = succeed '.' do
-        = link_to 'like their page on Facebook',
+        = link_to 'check out their page on Facebook',
           'https://www.facebook.com/Bacchus-Wood-Fired-145184168850725/'
     %hr.spacer
 
