--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -47,7 +47,7 @@ title: Bacchus trivia
              height: 450,
              allowfullscreen: true,
              src: url_for('https://www.google.com/maps/embed/v1/place',
-                          query: { key: 'AIzaSyCz3JbeK3YQ9eJEWqpeKh7JVOhp14iTIw0',
+                          query: { key: (data.googlemaps['keys'][app.environment] rescue ''),
                                    q: 'place_id:ChIJm5yzggcP3okR3gRxhu1P8-U',
                                    zoom: 15 }) }
   .columns.large-6
@@ -55,7 +55,7 @@ title: Bacchus trivia
              height: 450,
              allowfullscreen: true,
              src: url_for('https://www.google.com/maps/embed/v1/streetview',
-                          query: { key: 'AIzaSyCz3JbeK3YQ9eJEWqpeKh7JVOhp14iTIw0',
+                          query: { key: (data.googlemaps['keys'][app.environment] rescue ''),
                                    location: '42.7304362,-73.691748',
                                    heading: 300,
                                    fov: 100 }) }
